# gramps-ql

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
src/gramps_ql/: .gitignore  __init__.py  gql.py
tests/gramps_ql/: test_get.py  test_iter.py  test_match.py  test_parse.py  test_todo.py
